--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elederly </title>
+    <title>Ember</title>
   </head>
   <body>
-    <div id="root"></div> 
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
